--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Christopher Kang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,18 +20,22 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>Christopher Kang</h1>
+						<p>First-Year CS Student at the University of Washington, Seattle
+						<ul class="icons">
+							<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+							<li><a href="www.linkedin.com/in/christopher-kang"  target="_blank" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+						</ul>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">Courses/CV</a></li>
+							<li><a href="#second">Mission</a></li>
+							<li><a href="#third">Past Projects</a></li>
+							<li><a href="#cta">Contact Me!</a></li>
 						</ul>
 					</nav>
 
@@ -43,11 +47,15 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Hello. It's nice to meet you.</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>
+											I'm Christopher Kang, a freshman at the University of Washington, Seattle. Previously, I've
+											worked at Pacific Northwest National Laboratories and participated in Google's Computer
+											Science Summer Institute. <br>
+											UW is an exciting new opportunity to make connections, contribute to the community, 
+											develop skills, and research.
+										</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -122,6 +130,34 @@
 								</footer>
 							</section>
 
+							<section id="third" class="main special">
+									<header class="major">
+										<h2>Magna veroeros</h2>
+									</header>
+									<ul class="features">
+										<li>
+											<span class="icon major style1 fa-code"></span>
+											<h3>Ipsum consequat</h3>
+											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										</li>
+										<li>
+											<span class="icon major style3 fa-copy"></span>
+											<h3>Amed sed feugiat</h3>
+											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										</li>
+										<li>
+											<span class="icon major style5 fa-diamond"></span>
+											<h3>Dolor nullam</h3>
+											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										</li>
+									</ul>
+									<footer class="major">
+										<ul class="actions special">
+											<li><a href="generic.html" class="button">Learn More</a></li>
+										</ul>
+									</footer>
+								</section>
+
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
@@ -158,15 +194,9 @@
 								<dt>Email</dt>
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+							
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy;2018 Christopher Kang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
