Added photo, bold

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Christopher Kang</h1>
+						<h1> <b>Christopher Kang</b></h1>
 						<p>First-Year CS Student at the University of Washington, Seattle
 						<ul class="icons">
 							<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
@@ -51,8 +51,8 @@
 										</header>
 										<p>
 											I'm Christopher Kang, a freshman at the University of Washington, Seattle. Previously, I've
-											worked at Pacific Northwest National Laboratories and participated in Google's Computer
-											Science Summer Institute. <br>
+											worked at <b>Pacific Northwest National Laboratories </b> and participated in 
+											<b>Google's Computer Science Summer Institute</b>. <br>
 											UW is an exciting new opportunity to make connections, contribute to the community, 
 											develop skills, and research.
 										</p>
@@ -60,7 +60,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/profile2.jpg" alt="" /></span>
 								</div>
 							</section>
 
