--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Courses/CV</a></li>
-							<li><a href="#second">Mission</a></li>
-							<li><a href="#third">Past Projects</a></li>
-							<li><a href="#cta">Contact Me!</a></li>
+							<li><a href="#intro" class="active"><b>Introduction</b></a></li>
+							<li><a href="#first"><b>Courses/CV</b></a></li>
+							<li><a href="#second"><b>Mission</b></a></li>
+							<li><a href="#third"><b>Past Projects</b></a></li>
+							<li><a href="#cta"><b>Contact Me!</b></a></li>
 						</ul>
 					</nav>
 
