Populated course lists

--- a/index.html
+++ b/index.html
@@ -67,23 +67,35 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Courses</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><b>Completed</b></h3>
+										<p>
+											ECON 200/201 (AP)<br> <em>Intro to Micro/Macroeconomics</em> <br>
+											CHEM 142/152/162 (AP)<br> <em>General Chemistry Series</em> <br>
+											SPAN 201/202 (AP)<br> <em>Intermediate Spanish</em> <br>
+										</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><b>In Progress</b></h3>
+										<p>
+											MATH 134 <br> <em>Accelerated Honors Calculus</em> <br>
+											CSE 143X <br> <em>Accelerated Computer Programming II</em> <br>
+											HONORS 100 <br> <em>Honors Seminar</em> <br>
+										</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><b>Planned</b></h3>
+										<p>
+											MATH 135 (Winter 2019)<br> <em>Accelerated Honors Calculus</em> <br>
+											CSE 351 (Winter 2019)<br> <em>The Hardware/Software Interface</em> <br>
+											HONORS 345 (Winter 2019)<br> <em>A Study of Mass Incarceration</em> <br>
+										</p>
 									</li>
 								</ul>
 								<footer class="major">
