--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active"><b>Introduction</b></a></li>
-							<li><a href="#first"><b>Courses/CV</b></a></li>
-							<li><a href="#second"><b>Mission</b></a></li>
-							<li><a href="#third"><b>Past Projects</b></a></li>
+							<li><a href="#first"><b>Courses & Resume</b></a></li>
+							<li><a href="#second"><b>Past Projects</b></a></li>
+							<li><a href="#third"><b>Mission</b></a></li>
 							<li><a href="#cta"><b>Contact Me!</b></a></li>
 						</ul>
 					</nav>
@@ -51,7 +51,7 @@
 										</header>
 										<p>
 											I'm Christopher Kang, a freshman at the University of Washington, Seattle. Previously, I've
-											worked at <b>Pacific Northwest National Laboratories </b> and participated in 
+											worked at <b>Pacific Northwest National Laboratory </b> and participated in 
 											<b>Google's Computer Science Summer Institute</b>. <br>
 											UW is an exciting new opportunity to make connections, contribute to the community, 
 											develop skills, and research.
@@ -67,7 +67,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Courses</h2>
+									<h2>Courses & Resume</h2>
 								</header>
 								<ul class="features">
 									<li>
@@ -100,7 +100,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="KangResume18Q2.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -108,33 +108,33 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Past Projects</h2>
+									<p>
+										My focuses are on Machine Learning and data analytics. Here are some of my past projects.
+									</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+										<span class="icon fa-connectdevelop"></span>
+										<strong>Semi-Supervised Learning</strong> 
+										Created a TensorFlow implementation of a 
+										Graph-Based Semi-Supervised Machine Learning technique
+										described in <br> <i>Neural Graph Machines<br> (Bui, Ravi, & Ramavajjala 2017)</i>
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
+										<span class="icon fa-medkit"></span>
+										<strong>Supervised Learning</strong>
+										Leveraged Convolutional Neural Networks to visually identify melanomas. Focused on 
+										algorithms with maximal efficiency given limited computational resources.
 									</li>
 									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
+										<span class="icon fa-ravelry"></span>
+										<strong>Quantum Algorithms</strong>
+										Identified machine learning algorithms that could enhance the development of 
+										gate-based quantum algorithms, allowing for greater algorithmic abstraction.
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">Nam elementum nisl et mi a commodo </p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -191,7 +191,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<p>Sed lorem </p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
