--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+						<span class="icon introIcon fa-grav fa-5x" style="color:white"></span>
 						<h1> <b>Christopher Kang</b></h1>
 						<p>First-Year CS Student at the University of Washington, Seattle
 						<ul class="icons">
@@ -34,8 +35,8 @@
 							<li><a href="#intro" class="active"><b>Introduction</b></a></li>
 							<li><a href="#first"><b>Courses & Resume</b></a></li>
 							<li><a href="#second"><b>Past Projects</b></a></li>
-							<li><a href="#third"><b>Mission</b></a></li>
-							<li><a href="#cta"><b>Contact Me!</b></a></li>
+							<li><a href="#third"><b>Traits</b></a></li>
+							<!-- <li><a href="#cta"><b>Contact Me!</b></a></li> -->
 						</ul>
 					</nav>
 
@@ -50,14 +51,14 @@
 											<h2>Hello. It's nice to meet you.</h2>
 										</header>
 										<p>
-											I'm Christopher Kang, a freshman at the University of Washington, Seattle. Previously, I've
+											I'm Christopher Kang, a freshman at the University of Washington. Previously, I've
 											worked at <b>Pacific Northwest National Laboratory </b> and participated in 
 											<b>Google's Computer Science Summer Institute</b>. <br>
 											UW is an exciting new opportunity to make connections, contribute to the community, 
 											develop skills, and research.
 										</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a class="button" onclick="toBottom()">Contact me</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/profile2.jpg" alt="" /></span>
@@ -71,7 +72,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="icon major style1 fa-check"></span>
 										<h3><b>Completed</b></h3>
 										<p>
 											ECON 200/201 (AP)<br> <em>Intro to Micro/Macroeconomics</em> <br>
@@ -80,16 +81,16 @@
 										</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-spinner"></span>
 										<h3><b>In Progress</b></h3>
 										<p>
 											MATH 134 <br> <em>Accelerated Honors Calculus</em> <br>
-											CSE 143X <br> <em>Accelerated Computer Programming II</em> <br>
+											CSE 143X <br> <em>Accelerated Computer Programming</em> <br>
 											HONORS 100 <br> <em>Honors Seminar</em> <br>
 										</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style5 fa-angle-double-right"></span>
 										<h3><b>Planned</b></h3>
 										<p>
 											MATH 135 (Winter 2019)<br> <em>Accelerated Honors Calculus</em> <br>
@@ -110,7 +111,7 @@
 								<header class="major">
 									<h2>Past Projects</h2>
 									<p>
-										My focuses are on Machine Learning and data analytics. Here are some of my past projects.
+										My work has focused on machine earning and data analytics - here are some past projects.
 									</p>
 								</header>
 								<ul class="statistics">
@@ -134,44 +135,53 @@
 										gate-based quantum algorithms, allowing for greater algorithmic abstraction.
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo </p>
+								<!-- <p class="content"></p> -->
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a class="button" onclick="toBottom()">Contact me</a></li>
 									</ul>
 								</footer>
 							</section>
 
 							<section id="third" class="main special">
 									<header class="major">
-										<h2>Magna veroeros</h2>
+										<h2>Traits</h2>
 									</header>
 									<ul class="features">
 										<li>
-											<span class="icon major style1 fa-code"></span>
-											<h3>Ipsum consequat</h3>
-											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+											<span class="icon major style1 fa-eye"></span>
+											<h3><b>Idealistic</b></h3>
+											<p>
+												Honest, compassionate, giving. <br>
+												I strive to embody these ideals while empowering others to achieve personal growth.
+											</p>
 										</li>
 										<li>
-											<span class="icon major style3 fa-copy"></span>
-											<h3>Amed sed feugiat</h3>
-											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+											<span class="icon major style3 fa-rocket"></span>
+											<h3><b>Passionate</b></h3>
+											<p>
+												When I find an idea that excites me, I am relentless in exploring and executing it.
+												We must be fearless in the pursuit of ideas that captivate.
+											</p>
 										</li>
 										<li>
-											<span class="icon major style5 fa-diamond"></span>
-											<h3>Dolor nullam</h3>
-											<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+											<span class="icon major style5 fa-handshake-o"></span>
+											<h3><b>Collaborative</b></h3>
+											<p>
+												Everyone has valuable ideas - only with diverse teams can 
+												we truly formulate ideas that have the greatest positive impact. 
+											</p>
 										</li>
 									</ul>
 									<footer class="major">
-										<ul class="actions special">
+										<!-- <ul class="actions special">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</footer>
 								</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<!-- <section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -183,28 +193,23 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
+							</section> -->
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem </p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<h2>Questions?</h2>
+							<p>Feel free to email me if you have any questions! I'm always open to helping with new projects.</p>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact Me</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<!-- <dt>Address</dt>
+								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd> -->
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto:ck32@uw.edu">ck32@uw.edu</a></dd>
 							</dl>
 							
 						</section>
