--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="KangResume18Q2.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
+										<li><a href="KangResume180919.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
 									</ul>
 								</footer>
 							</section>
