--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<p>First-Year CS Student at the University of Washington, Seattle
 						<ul class="icons">
 							<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-							<li><a href="www.linkedin.com/in/christopher-kang"  target="_blank" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/christopher-kang"  target="_blank" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</header>
 
