Updated courses, resume (190120)

--- a/index.html
+++ b/index.html
@@ -5,186 +5,190 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Christopher Kang</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Christopher Kang</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<span class="icon introIcon fa-grav fa-5x" style="color:white"></span>
-						<h1> <b>Christopher Kang</b></h1>
-						<p>First-Year CS Student at the University of Washington, Seattle
-						<ul class="icons">
-							<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/christopher-kang"  target="_blank" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+			<span class="icon introIcon fa-grav fa-5x" style="color:white"></span>
+			<h1> <b>Christopher Kang</b></h1>
+			<p>First-Year CS Student at the University of Washington, Seattle
+				<ul class="icons">
+					<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/christopher-kang" target="_blank" class="icon fa-linkedin alt"><span
+							 class="label">LinkedIn</span></a></li>
+				</ul>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro" class="active"><b>Introduction</b></a></li>
+				<li><a href="#first"><b>Courses & Resume</b></a></li>
+				<li><a href="#second"><b>Past Projects</b></a></li>
+				<li><a href="#third"><b>Traits</b></a></li>
+				<!-- <li><a href="#cta"><b>Contact Me!</b></a></li> -->
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Introduction -->
+			<section id="intro" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Hello. It's nice to meet you.</h2>
+						</header>
+						<p>
+							I'm Christopher Kang, a freshman at the University of Washington. Previously, I've
+							worked at <b>Pacific Northwest National Laboratory </b> and participated in
+							<b>Google's Computer Science Summer Institute</b>. <br>
+							UW is an exciting new opportunity to make connections, contribute to the community,
+							develop skills, and research.
+						</p>
+						<ul class="actions">
+							<li><a class="button" onclick="toBottom()">Contact me</a></li>
 						</ul>
-					</header>
+					</div>
+					<span class="image"><img src="images/profile2.jpg" alt="" /></span>
+				</div>
+			</section>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro" class="active"><b>Introduction</b></a></li>
-							<li><a href="#first"><b>Courses & Resume</b></a></li>
-							<li><a href="#second"><b>Past Projects</b></a></li>
-							<li><a href="#third"><b>Traits</b></a></li>
-							<!-- <li><a href="#cta"><b>Contact Me!</b></a></li> -->
-						</ul>
-					</nav>
+			<!-- First Section -->
+			<section id="first" class="main special">
+				<header class="major">
+					<h2>Courses & Resume</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<span class="icon major style1 fa-check"></span>
+						<h3><b>Completed</b></h3>
+						<p>
+							Math 134 <br> <em>Accelerated Honors Calculus</em> <br>
+							CSE 143X <br> <em>Accelerated Computer Programming</em> <br>
+							ECON 200/201 (AP)<br> <em>Intro to Micro/Macroeconomics</em> <br>
+						</p>
+					</li>
+					<li>
+						<span class="icon major style3 fa-spinner"></span>
+						<h3><b>In Progress</b></h3>
+						<p>
+							MATH 135 <br> <em>Accelerated Honors Calculus</em> <br>
+							CSE 490Q <br> <em>Quantum Computing</em> <br>
+							HONORS 345 <br> <em>A Study of Mass Incarceration</em> <br>
+						</p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-angle-double-right"></span>
+						<h3><b>Planned</b></h3>
+						<p>
+							Math 136 (Spring 2019)<br> <em>Accelerated Honors Calculus</em> <br>
+							CSE 311 (Spring 2019)<br> <em>Foundations of Computing I</em> <br>
+							ECON 300 (Spring 2019)<br> <em>Intermediate Microeconomics</em> <br>
+						</p>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="KANG190114Resume.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
+					</ul>
+				</footer>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
+			<!-- Second Section -->
+			<section id="second" class="main special">
+				<header class="major">
+					<h2>Past Projects</h2>
+					<p>
+						My work has focused on machine earning and data analytics - here are some past projects.
+					</p>
+				</header>
+				<ul class="statistics">
+					<li class="style1">
+						<span class="icon fa-connectdevelop"></span>
+						<strong>Semi-Supervised Learning</strong>
+						Created a TensorFlow implementation of a
+						Graph-Based Semi-Supervised Machine Learning technique
+						described in <br> <i>Neural Graph Machines<br> (Bui, Ravi, & Ramavajjala 2017)</i>
+					</li>
+					<li class="style2">
+						<span class="icon fa-medkit"></span>
+						<strong>Supervised Learning</strong>
+						Leveraged Convolutional Neural Networks to visually identify melanomas. Focused on
+						algorithms with maximal efficiency given limited computational resources.
+					</li>
+					<li class="style3">
+						<span class="icon fa-ravelry"></span>
+						<strong>Quantum Algorithms</strong>
+						Identified machine learning algorithms that could enhance the development of
+						gate-based quantum algorithms, allowing for greater algorithmic abstraction.
+					</li>
+				</ul>
+				<!-- <p class="content"></p> -->
+				<footer class="major">
+					<ul class="actions special">
+						<li><a class="button" onclick="toBottom()">Contact me</a></li>
+					</ul>
+				</footer>
+			</section>
 
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Hello. It's nice to meet you.</h2>
-										</header>
-										<p>
-											I'm Christopher Kang, a freshman at the University of Washington. Previously, I've
-											worked at <b>Pacific Northwest National Laboratory </b> and participated in 
-											<b>Google's Computer Science Summer Institute</b>. <br>
-											UW is an exciting new opportunity to make connections, contribute to the community, 
-											develop skills, and research.
-										</p>
-										<ul class="actions">
-											<li><a class="button" onclick="toBottom()">Contact me</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/profile2.jpg" alt="" /></span>
-								</div>
-							</section>
-
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Courses & Resume</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-check"></span>
-										<h3><b>Completed</b></h3>
-										<p>
-											ECON 200/201 (AP)<br> <em>Intro to Micro/Macroeconomics</em> <br>
-											CHEM 142/152/162 (AP)<br> <em>General Chemistry Series</em> <br>
-											SPAN 201/202 (AP)<br> <em>Intermediate Spanish</em> <br>
-										</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-spinner"></span>
-										<h3><b>In Progress</b></h3>
-										<p>
-											MATH 134 <br> <em>Accelerated Honors Calculus</em> <br>
-											CSE 143X <br> <em>Accelerated Computer Programming</em> <br>
-											HONORS 100 <br> <em>Honors Seminar</em> <br>
-										</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-angle-double-right"></span>
-										<h3><b>Planned</b></h3>
-										<p>
-											MATH 135 (Winter 2019)<br> <em>Accelerated Honors Calculus</em> <br>
-											CSE 351 (Winter 2019)<br> <em>The Hardware/Software Interface</em> <br>
-											HONORS 345 (Winter 2019)<br> <em>A Study of Mass Incarceration</em> <br>
-										</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="KangResume180919.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Past Projects</h2>
-									<p>
-										My work has focused on machine earning and data analytics - here are some past projects.
-									</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-connectdevelop"></span>
-										<strong>Semi-Supervised Learning</strong> 
-										Created a TensorFlow implementation of a 
-										Graph-Based Semi-Supervised Machine Learning technique
-										described in <br> <i>Neural Graph Machines<br> (Bui, Ravi, & Ramavajjala 2017)</i>
-									</li>
-									<li class="style2">
-										<span class="icon fa-medkit"></span>
-										<strong>Supervised Learning</strong>
-										Leveraged Convolutional Neural Networks to visually identify melanomas. Focused on 
-										algorithms with maximal efficiency given limited computational resources.
-									</li>
-									<li class="style3">
-										<span class="icon fa-ravelry"></span>
-										<strong>Quantum Algorithms</strong>
-										Identified machine learning algorithms that could enhance the development of 
-										gate-based quantum algorithms, allowing for greater algorithmic abstraction.
-									</li>
-								</ul>
-								<!-- <p class="content"></p> -->
-								<footer class="major">
-									<ul class="actions special">
-										<li><a class="button" onclick="toBottom()">Contact me</a></li>
-									</ul>
-								</footer>
-							</section>
-
-							<section id="third" class="main special">
-									<header class="major">
-										<h2>Traits</h2>
-									</header>
-									<ul class="features">
-										<li>
-											<span class="icon major style1 fa-eye"></span>
-											<h3><b>Idealistic</b></h3>
-											<p>
-												Honest, compassionate, giving. <br>
-												I strive to embody these ideals while empowering others to achieve personal growth.
-											</p>
-										</li>
-										<li>
-											<span class="icon major style3 fa-rocket"></span>
-											<h3><b>Passionate</b></h3>
-											<p>
-												When I find an idea that excites me, I am relentless in exploring and executing it.
-												We must be fearless in the pursuit of ideas that captivate.
-											</p>
-										</li>
-										<li>
-											<span class="icon major style5 fa-handshake-o"></span>
-											<h3><b>Collaborative</b></h3>
-											<p>
-												Everyone has valuable ideas - only with diverse teams can 
-												we truly formulate ideas that have the greatest positive impact. 
-											</p>
-										</li>
-									</ul>
-									<footer class="major">
-										<!-- <ul class="actions special">
+			<section id="third" class="main special">
+				<header class="major">
+					<h2>Traits</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<span class="icon major style1 fa-eye"></span>
+						<h3><b>Idealistic</b></h3>
+						<p>
+							Honest, compassionate, giving. <br>
+							I strive to embody these ideals while empowering others to achieve personal growth.
+						</p>
+					</li>
+					<li>
+						<span class="icon major style3 fa-rocket"></span>
+						<h3><b>Passionate</b></h3>
+						<p>
+							When I find an idea that excites me, I am relentless in exploring and executing it.
+							We must be fearless in the pursuit of ideas that captivate.
+						</p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-handshake-o"></span>
+						<h3><b>Collaborative</b></h3>
+						<p>
+							Everyone has valuable ideas - only with diverse teams can
+							we truly formulate ideas that have the greatest positive impact.
+						</p>
+					</li>
+				</ul>
+				<footer class="major">
+					<!-- <ul class="actions special">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
-										<ul class="actions special">
-											<li><a class="button" href="/blog/">Honors Portfolio / Blog</a></li>
-										</ul>
-									</footer>
-								</section>
+					<ul class="actions special">
+						<li><a class="button" href="/blog/">Honors Portfolio / Blog</a></li>
+					</ul>
+				</footer>
+			</section>
 
-						<!-- Get Started -->
-							<!-- <section id="cta" class="main special">
+			<!-- Get Started -->
+			<!-- <section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -198,37 +202,38 @@
 								</footer>
 							</section> -->
 
-					</div>
+		</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Questions?</h2>
-							<p>Feel free to email me if you have any questions! I'm always open to helping with new projects.</p>
-						</section>
-						<section>
-							<h2>Contact Me</h2>
-							<dl class="alt">
-								<!-- <dt>Address</dt>
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Questions?</h2>
+				<p>Feel free to email me if you have any questions! I'm always open to helping with new projects.</p>
+			</section>
+			<section>
+				<h2>Contact Me</h2>
+				<dl class="alt">
+					<!-- <dt>Address</dt>
 								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd> -->
-								<dt>Email</dt>
-								<dd><a href="mailto:ck32@uw.edu">ck32@uw.edu</a></dd>
-							</dl>
-							
-						</section>
-						<p class="copyright">&copy;2018 Christopher Kang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+					<dt>Email</dt>
+					<dd><a href="mailto:ck32@uw.edu">ck32@uw.edu</a></dd>
+				</dl>
 
-			</div>
+			</section>
+			<p class="copyright">&copy;2018 Christopher Kang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
