Updated honors URL

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
 					<ul class="actions special">
-						<li><a class="button" href="/blog/">Honors Portfolio / Blog</a></li>
+						<li><a class="button" href="/honors/">Honors Portfolio / Blog</a></li>
 					</ul>
 				</footer>
 			</section>
