--- a/index.html
+++ b/index.html
@@ -79,27 +79,27 @@
 						<span class="icon major style1 fa-check"></span>
 						<h3><b>Completed</b></h3>
 						<p>
-							Math 134 <br> <em>Accelerated Honors Calculus</em> <br>
-							CSE 143X <br> <em>Accelerated Computer Programming</em> <br>
-							ECON 200/201 (AP)<br> <em>Intro to Micro/Macroeconomics</em> <br>
+							Math 134-6 <br> <em>Accelerated Honors Calculus</em> <br>
+							CSE 490Q <br> <em>Quantum Computing</em> <br>
+							CSE 311<br> <em>Foundations of Computing I</em> <br>
 						</p>
 					</li>
 					<li>
 						<span class="icon major style3 fa-spinner"></span>
 						<h3><b>In Progress</b></h3>
 						<p>
-							MATH 135 <br> <em>Accelerated Honors Calculus</em> <br>
-							CSE 490Q <br> <em>Quantum Computing</em> <br>
-							HONORS 345 <br> <em>A Study of Mass Incarceration</em> <br>
+							CSE 332 <br> <em>Data Structures & Parallelism</em> <br>
+							CSE 312 <br> <em>Foundations of Computing II</em> <br>
+							Math 334 <br> <em>Accelerated Honors Calculus, Year 2</em> <br>
 						</p>
 					</li>
 					<li>
 						<span class="icon major style5 fa-angle-double-right"></span>
 						<h3><b>Planned</b></h3>
 						<p>
-							Math 136 (Spring 2019)<br> <em>Accelerated Honors Calculus</em> <br>
-							CSE 311 (Spring 2019)<br> <em>Foundations of Computing I</em> <br>
-							ECON 300 (Spring 2019)<br> <em>Intermediate Microeconomics</em> <br>
+							Math 335 (Winter 2020)<br> <em>Accelerated Honors Calculus, Year 2</em> <br>
+							CSE 351 (Winter 2020)<br> <em>The Hardware/Software Interface</em> <br>
+							ECON 300 (Winter 2020)<br> <em>Intermediate Microeconomics</em> <br>
 						</p>
 					</li>
 				</ul>
